posiGen_FullsendBox/src/objects/MetaDataServiceSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EndPointUrl__c</fullName>
        <label>EndPointUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>security_token__c</fullName>
        <label>security token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MetaDataServiceSetting</label>
</CustomObject>